# agents

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.roadmap/: audit-2026-03-03.md
rust/: Cargo.toml
rust/crates/skillguard-cli/: Cargo.toml
rust/crates/skillguard-cli/src/: main.rs
rust/crates/skillguard-cli/src/commands/: audit.rs  build.rs  export.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  publish.rs  run.rs  search.rs  verify.rs  wrap.rs
rust/crates/skillguard-core/: Cargo.toml
rust/crates/skillguard-core/src/: action.rs  anthropic.rs  error.rs  lib.rs  manifest.rs  permission.rs  validate.rs
rust/crates/skillguard-core/tests/: parse_existing_skills.rs
rust/crates/skillguard-registry/: Cargo.toml
rust/crates/skillguard-registry/src/: fetch.rs  index.rs  lib.rs  package.rs  publish.rs
rust/crates/skillguard-sandbox/: Cargo.toml
rust/crates/skillguard-sandbox/src/: capability.rs  execution.rs  lib.rs  resource_limits.rs  runtime.rs
rust/crates/skillguard-signing/: Cargo.toml
rust/crates/skillguard-signing/src/: lib.rs  provenance.rs  sign.rs  verify.rs
rust/sdk/python/: pyproject.toml
rust/sdk/python/skillguard/: __init__.py  client.py
rust/sdk/python/skillguard/adapters/: __init__.py  langchain.py  mcp.py
skills/file-ops/: __init__.py  skill.py  skillguard.yaml
skills/web-fetch/: __init__.py  skill.py  skillguard.yaml
src/skillguard/: __init__.py
src/skillguard/adapters/: __init__.py  base.py  langchain.py  mcp.py
src/skillguard/cli/: __init__.py  main.py
src/skillguard/cli/commands/: audit.py  build.py  info.py  init.py  install.py  list.py  publish.py  run.py  search.py  verify.py
src/skillguard/sdk/: __init__.py  manifest.py  sandbox.py  skill.py
tests/: __init__.py  test_manifest.py  test_sandbox.py  test_skill.py
