[workspace]
resolver = "2"
members = [
    "crates/skillguard-core",
    "crates/skillguard-sandbox",
    "crates/skillguard-signing",
    "crates/skillguard-registry",
    "crates/skillguard-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ipriyaaanshu/agents"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
comfy-table = "7.0"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Sandbox
wasmtime = "28.0"
wasmtime-wasi = "28.0"

# Signing
sigstore = "0.10"

# Git
gix = { version = "0.68", default-features = false, features = ["blocking-network-client"] }

# Hashing & packaging
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Regex
regex = "1.0"

# Workspace crates
skillguard-core = { path = "crates/skillguard-core" }
skillguard-sandbox = { path = "crates/skillguard-sandbox" }
skillguard-signing = { path = "crates/skillguard-signing" }
skillguard-registry = { path = "crates/skillguard-registry" }
