[package]
name = "skillguard-core"
description = "Core types, manifest parsing, and validation for SkillGuard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
