[package]
name = "skillguard-signing"
description = "Sigstore signing and SLSA provenance for SkillGuard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillguard-core = { workspace = true }
sigstore = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tempfile = "3.0"
