[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillguard"
version = "0.2.0"
description = "Python SDK for SkillGuard — security-first AI agent skills"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "SkillGuard Team" }]
keywords = ["ai", "agent", "skills", "security", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.0"]
all = ["langchain-core>=0.3", "mcp>=1.0"]
